[fixed] z-index

--- a/rijksmuseum/styles/utils/loadingAnimations.css
+++ b/rijksmuseum/styles/utils/loadingAnimations.css
@@ -14,7 +14,7 @@
 }
 .loadingBanner.visible {
 	display: block;
-	z-index: 99;
+	z-index: 999;
 }
 .loadingBanner img {
 	position: absolute;
